# mcps

./: .gitignore  README.md  start-servers.sh
.cursor/rules/project-rules/: RULE.md
context7/: manual.md  package-lock.json  package.json
gateway/: README.md  pyproject.toml
gateway/gateway_app/: config.py  proxy.py  server.py
gateway/tests/: test_gateway.py
markdownify/: README.md  gateway.py  manual.md  pyproject.toml  requirements.txt
markdownify/markdownify_app/: server.py  storage.py
markdownify/markdownify_app/converters/: csv_converter.py  docx_converter.py  excel_converter.py  pdf_converter.py  pptx_converter.py
markdownify/tests/: conftest.py  test_converters.py  test_server.py  test_storage.py
nornicdb/: manual.md
