[project]
name = "mcps-gateway"
version = "0.1.0"
description = "Path-based reverse proxy gateway for multiple MCP services"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
]

[project.scripts]
mcps-gateway = "gateway_app.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway_app"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.14.10",
]
